# asistencias_2

./: .aider.chat.history.md  .aider.input.history  .env  .env.example  .gitattributes  .gitignore  .goosehints  AGENTS.md  CLAUDE.md  CRUSH.md  IMPLEMENTACION_COMPLETADA.md  INFORME_ESTABILIZACION_TESTS.md  OPTIMIZATION_ANALYSIS.md  PERMISOS_SIN_GOCE_DOCS.md  PRUEBAS_SALIDAS_ANTICIPADAS.md  QWEN.md  README_PYTEST.md  RESUMEN_IMPLEMENTACION_PERDON_RETARDOS.md  ROADMAP_FULLSTACK.md  Readme.md  TAREAS_CORRECCION_TESTS.md  api_client.py  async_api_client.py  cheques_agrupados.csv  cheques_completos_por_dia.csv  conexión_bd.py  config.py  dashboard_asistencia.html  data_processor.py  db_connection.py  db_postgres.sql  db_postgres_connection.py  debug_frappe.py  debug_frappe2.py  demo_logica_retardos.py  exceptions.py  generar_reporte_avanzado.py  generar_reporte_optimizado.py  generar_reporte_optimizado.py.backup  gui_pyqt6.py  (+26 more)
.crush/: crush.db-shm  crush.db-wal
.kiro/specs/database-query-optimization/: design.md  requirements.md  tasks.md
Docs/: API_DOCUMENTATION.md  APP_FUNCTIONALITY.md  ARCHITECTURE_ANALYSIS_REPORT.md  ARQUITECTURA_RESUMEN.md  CLEANUP_PLAN.md  COMPARATIVE_ANALYSIS.md  DEPENDENCIES_ENTRY_POINTS.md  ENTRY_POINTS_UPDATE.md  FUNCTIONAL_COVERAGE_VALIDATION.md  IMPLEMENTATION_PLAN.md  INTEGRACION_PERMISOS.md  LEGACY_FILE_REMOVAL.md  NIGHT_SHIFT_FIX_README.md  PERFORMANCE_VALIDATION_REPORT.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_PERFORMANCE_REPORT.md  README_MODULAR.md  README_PERMISOS_TESTS.md  README_PYTEST.md  REGRESSION_TEST_REPORT.md  RESUMEN_CAMBIOS_PERMISOS_MEDIO_DIA.md  UNIQUE_FUNCTIONALITY_MAPPING.md
tests/: __init__.py  conftest_permisos.py  run_tests.py  test_api_client.py  test_bug_4_comprehensive.py  test_bug_4_last_day_checkout.py  test_casos_edge.py  test_config.py  test_cruce_medianoche.py  test_data_processor.py  test_deteccion_salidas_anticipadas.py  test_generar_reporte_optimizado.py  test_horas_descanso.py  test_main.py  test_night_shift_processing.py  test_normalizacion_permisos.py  test_perdon_retardos.py  test_performance_enhancements.py  test_permisos_integration.py  test_permisos_performance.py  test_permisos_sin_goce.py  test_quincenas.py  test_report_generator.py  test_reporte_excel.py  test_resumen_periodo.py  test_umbral_falta_injustificada.py  test_utils.py
